--- a/treehouse.css
+++ b/treehouse.css
@@ -1,1 +1,126 @@
-@import url('https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:400,400i|Alegreya+Sans:400,400i|Alegreya:400i,900');html{margin:0;padding:0}body{font-family:'Alegreya Sans SC',Verdana,Tahoma,sans-serif;margin:0;padding:0}h1,h2,p{text-align:center}.icon{width:50px;margin:auto;border-radius:50%}.center{text-align:center;margin:0 auto}p>#awesome{margin-left:30px}p>#awesome:hover{opacity:.9;transition:0.3s}header{height:25vh;background:linear-gradient(orange,red), no-repeat;background-blend-mode:multiply;background-size:cover;position:relative;border:1px ridge #ddd;box-shadow:5px 5px 5px #aaa;margin-top:10px}header #me{font-size:3.625rem;color:rgba(255, 255, 255, 1);text-transform:uppercase;font-weight:normal;line-height:1.3;text-shadow:0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0,0,0,.1), 0 0 5px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.3), 0 3px 5px rgba(0,0,0,.2), 0 5px 10px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.2), 0 20px 20px rgba(0,0,0,.15);padding:2px;margin:1px}footer{background:linear-gradient(orange,red),no-repeat;height:5vh;border-radius:25px;color:#FFFAF0}.cursive{font-family:cursive}.badge-container{max-width:65%;margin:0 auto}#badges li{display:inline}#badges li:nth-child(20n+11){margin-left:30px}#badges li img{width:60px;margin:-17px 2px 0px 0px}.badge-container h1{text-align:center;font-family:'Helvetica Neue';font-weight:bold;-webkit-font-smoothing:antialiased}#badges li img:hover{opacity:.7}@media screen and (min-width: 320px) and (max-width: 500px){.badge-container{text-align:center;padding:10px;margin:15px}#badges li img{width:20px;margin:0}}
+@import url('https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:400,400i|Alegreya+Sans:400,400i|Alegreya:400i,900');
+
+html {
+    margin: 0;
+    padding: 0
+}
+
+body {
+    font-family: 'Alegreya Sans SC', Verdana, Tahoma, sans-serif;
+    margin: 0;
+    padding: 0
+}
+
+h1,
+h2,
+p {
+    text-align: center
+}
+nav > ul >li {
+    display: inline-block;
+}
+.ctr {
+    text-align: center;
+}
+.icon {
+    width: 75px;
+    margin: auto;
+    border-radius: 50%
+}
+
+.center {
+    text-align: center;
+    margin: 0 auto
+}
+
+.special {
+    border: 1px solid white;
+    padding: 5px;
+    border-style:ridge;
+    border-width:5px;
+ 
+}
+
+#awesome {
+    margin-left: 30px
+}
+
+#awesome:hover {
+    opacity: .9;
+    transition: 0.3s
+}
+
+header {
+    height: 25vh;
+    background: linear-gradient(orange, red), no-repeat;
+    background-blend-mode: multiply;
+    background-size: cover;
+    position: relative;
+    border: 1px ridge #ddd;
+    box-shadow: 5px 5px 5px #aaa;
+    margin-top: 10px
+}
+
+header #me {
+    font-size: 3.625rem;
+    color: rgba(255, 255, 255, 1);
+    text-transform: uppercase;
+    font-weight: normal;
+    line-height: 1.3;
+    text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0, 0, 0, .1), 0 0 5px rgba(0, 0, 0, .1), 0 1px 3px rgba(0, 0, 0, .3), 0 3px 5px rgba(0, 0, 0, .2), 0 5px 10px rgba(0, 0, 0, .25), 0 10px 10px rgba(0, 0, 0, .2), 0 20px 20px rgba(0, 0, 0, .15);
+    padding: 2px;
+    margin: 1px
+}
+
+footer {
+    background: linear-gradient(orange, red), no-repeat;
+    height: 5vh;
+    border-radius: 25px;
+    color: #FFFAF0
+}
+
+.cursive {
+    font-family: cursive
+}
+
+.badge-container {
+    max-width: 65%;
+    margin: 0 auto
+}
+
+#badges li {
+    display: inline
+}
+
+#badges li:nth-child(20n+11) {
+    margin-left: 30px
+}
+
+#badges li img {
+    width: 60px;
+    margin: -17px 2px 0px 0px
+}
+
+.badge-container h1 {
+    text-align: center;
+    font-family: 'Helvetica Neue';
+    font-weight: bold;
+    -webkit-font-smoothing: antialiased
+}
+
+#badges li img:hover {
+    opacity: .7
+}
+
+@media screen and (min-width: 320px) and (max-width: 500px) {
+    .badge-container {
+        text-align: center;
+        padding: 10px;
+        margin: 15px
+    }
+
+    #badges li img {
+        width: 20px;
+        margin: 0
+    }
+}
